// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should generate files 1`] = `
Array [
  "building.form-group-fac.ts",
  "building.form.ts",
  "building.model.ts",
  "building.properties.ts",
  "building.test-obj-fac.ts",
  "endpoints.ts",
  "index.ts",
  "site-collection.form-group-fac.ts",
  "site-collection.form.ts",
  "site-collection.model.ts",
  "site-collection.properties.ts",
  "site-collection.test-obj-fac.ts",
  "site.form-group-fac.ts",
  "site.form.ts",
  "site.model.ts",
  "site.properties.ts",
  "site.test-obj-fac.ts",
  "tag.form-group-fac.ts",
  "tag.form.ts",
  "tag.model.ts",
  "tag.properties.ts",
  "tag.test-obj-fac.ts",
  "unit-tag.form-group-fac.ts",
  "unit-tag.form.ts",
  "unit-tag.model.ts",
  "unit-tag.properties.ts",
  "unit-tag.test-obj-fac.ts",
  "unit-type.form-group-fac.ts",
  "unit-type.form.ts",
  "unit-type.model.ts",
  "unit-type.properties.ts",
  "unit-type.test-obj-fac.ts",
  "unit.form-group-fac.ts",
  "unit.form.ts",
  "unit.model.ts",
  "unit.properties.ts",
  "unit.test-obj-fac.ts",
]
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should generate files 2`] = `
Array [
  "building.form-group-fac.ts",
  "building.form.ts",
  "building.model.ts",
  "building.properties.ts",
  "building.test-obj-fac.ts",
  "endpoints.ts",
  "index.ts",
  "site-collection.form-group-fac.ts",
  "site-collection.form.ts",
  "site-collection.model.ts",
  "site-collection.properties.ts",
  "site-collection.test-obj-fac.ts",
  "site.form-group-fac.ts",
  "site.form.ts",
  "site.model.ts",
  "site.properties.ts",
  "site.test-obj-fac.ts",
  "tag.form-group-fac.ts",
  "tag.form.ts",
  "tag.model.ts",
  "tag.properties.ts",
  "tag.test-obj-fac.ts",
  "unit-tag.form-group-fac.ts",
  "unit-tag.form.ts",
  "unit-tag.model.ts",
  "unit-tag.properties.ts",
  "unit-tag.test-obj-fac.ts",
  "unit-type.form-group-fac.ts",
  "unit-type.form.ts",
  "unit-type.model.ts",
  "unit-type.properties.ts",
  "unit-type.test-obj-fac.ts",
  "unit.form-group-fac.ts",
  "unit.form.ts",
  "unit.model.ts",
  "unit.properties.ts",
  "unit.test-obj-fac.ts",
]
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should generate files: building.form.ts 1`] = `
"/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup } from '@angular/forms'; //NOSONAR
import { ISiteForm } from './site.form';
import { IUnitForm } from './unit.form';

export interface IBuildingForm {
    id: FormControl<string | null>;
    siteId: FormControl<string | null>;
    identifier: FormControl<string | null>;
    isEnabled: FormControl<boolean | null>;
    site: FormGroup<ISiteForm | null>;
    units: FormArray<FormGroup<IUnitForm>>;
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should generate files: building.form-group-fac.ts 1`] = `
"/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup, Validators } from '@angular/forms'; //NOSONAR
import { IBuildingForm } from './building.form';
import { ISiteForm } from './site.form';
import { IUnitForm } from './unit.form';

export function BuildingFormGroupFac(): FormGroup<IBuildingForm> {
  return new FormGroup<IBuildingForm>({
    id: new FormControl<string | null>(null),
    siteId: new FormControl<string | null>(null),
    identifier: new FormControl<string | null>(null),
    isEnabled: new FormControl<boolean | null>(null),
    site: new FormGroup<ISiteForm | null>(null),
    units: new FormArray<FormGroup<IUnitForm>>([]),
  });
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should generate files: building.model.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { ISite } from './site.model';
import { IUnit } from './unit.model';

// eslint-disable-next-line @typescript-eslint/no-empty-interface
export interface IBuilding {
  id?: string | null;
  siteId?: string | null;
  identifier?: string | null;
  isEnabled?: boolean | null;
  site?: Partial<ISite> | null;
  units?: Partial<IUnit[]> | null;
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should generate files: building.properties.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export enum BuildingProperties {
  ID = 'id',
  SITE_ID = 'siteId',
  IDENTIFIER = 'identifier',
  IS_ENABLED = 'isEnabled',
  SITE = 'site',
  UNITS = 'units',
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should generate files: building.test-obj-fac.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #test-object-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { createTestSite } from './site.test-obj-fac';
import { createTestUnit } from './unit.test-obj-fac';
import { IBuilding } from './building.model';
import { BuildingProperties } from './building.properties';

export function createTestBuilding(): Partial<IBuilding> {
    return { 
      [BuildingProperties.ID]: 'ID',
      [BuildingProperties.SITE_ID]: 'SITE_ID',
      [BuildingProperties.IDENTIFIER]: 'IDENTIFIER',
      [BuildingProperties.IS_ENABLED]: false, 
      [BuildingProperties.SITE]: createTestSite(),
      [BuildingProperties.UNITS]: [createTestUnit()],
    };
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should generate files: endpoints.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #endpoints-ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export enum Endpoints {
  buildings = '/odata/v1/Buildings',
  siteCollections = '/odata/v1/SiteCollections',
  sites = '/odata/v1/Sites',
  units = '/odata/v1/Units',
  unitTypes = '/odata/v1/UnitTypes',
}
export interface IEndpoints {
  readonly buildings: string;
  readonly siteCollections: string;
  readonly sites: string;
  readonly units: string;
  readonly unitTypes: string;
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should generate files: index.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #generate-barrel-ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export * from './building.form-group-fac';
export * from './building.form';
export * from './building.model';
export * from './building.properties';
export * from './building.test-obj-fac';
export * from './site-collection.form-group-fac';
export * from './site-collection.form';
export * from './site-collection.model';
export * from './site-collection.properties';
export * from './site-collection.test-obj-fac';
export * from './site.form-group-fac';
export * from './site.form';
export * from './site.model';
export * from './site.properties';
export * from './site.test-obj-fac';
export * from './tag.form-group-fac';
export * from './tag.form';
export * from './tag.model';
export * from './tag.properties';
export * from './tag.test-obj-fac';
export * from './unit-tag.form-group-fac';
export * from './unit-tag.form';
export * from './unit-tag.model';
export * from './unit-tag.properties';
export * from './unit-tag.test-obj-fac';
export * from './unit-type.form-group-fac';
export * from './unit-type.form';
export * from './unit-type.model';
export * from './unit-type.properties';
export * from './unit-type.test-obj-fac';
export * from './unit.form-group-fac';
export * from './unit.form';
export * from './unit.model';
export * from './unit.properties';
export * from './unit.test-obj-fac';
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should generate files: site.form.ts 1`] = `
"/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup } from '@angular/forms'; //NOSONAR
import { ISiteCollectionForm } from './site-collection.form';
import { IBuildingForm } from './building.form';
import { IUnitForm } from './unit.form';

export interface ISiteForm {
    id: FormControl<string | null>;
    tenantId: FormControl<string | null>;
    accountId: FormControl<string | null>;
    accountName: FormControl<string | null>;
    siteCollectionId: FormControl<string | null>;
    number: FormControl<string | null>;
    name: FormControl<string | null>;
    addressLine1: FormControl<string | null>;
    addressLine2: FormControl<string | null>;
    city: FormControl<string | null>;
    state: FormControl<string | null>;
    zip: FormControl<string | null>;
    isEnabled: FormControl<boolean | null>;
    siteCollection: FormGroup<ISiteCollectionForm | null>;
    buildings: FormArray<FormGroup<IBuildingForm>>;
    units: FormArray<FormGroup<IUnitForm>>;
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should generate files: site.form-group-fac.ts 1`] = `
"/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup, Validators } from '@angular/forms'; //NOSONAR
import { ISiteForm } from './site.form';
import { ISiteCollectionForm } from './site-collection.form';
import { IBuildingForm } from './building.form';
import { IUnitForm } from './unit.form';

export function SiteFormGroupFac(): FormGroup<ISiteForm> {
  return new FormGroup<ISiteForm>({
    id: new FormControl<string | null>(null),
    tenantId: new FormControl<string | null>(null),
    accountId: new FormControl<string | null>(null),
    accountName: new FormControl<string | null>(null),
    siteCollectionId: new FormControl<string | null>(null),
    number: new FormControl<string | null>(null),
    name: new FormControl<string | null>(null),
    addressLine1: new FormControl<string | null>(null),
    addressLine2: new FormControl<string | null>(null),
    city: new FormControl<string | null>(null),
    state: new FormControl<string | null>(null),
    zip: new FormControl<string | null>(null),
    isEnabled: new FormControl<boolean | null>(null),
    siteCollection: new FormGroup<ISiteCollectionForm | null>(null),
    buildings: new FormArray<FormGroup<IBuildingForm>>([]),
    units: new FormArray<FormGroup<IUnitForm>>([]),
  });
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should generate files: site.model.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { ISiteCollection } from './site-collection.model';
import { IBuilding } from './building.model';
import { IUnit } from './unit.model';

// eslint-disable-next-line @typescript-eslint/no-empty-interface
export interface ISite {
  id?: string | null;
  tenantId?: string | null;
  accountId?: string | null;
  accountName?: string | null;
  siteCollectionId?: string | null;
  number?: string | null;
  name?: string | null;
  addressLine1?: string | null;
  addressLine2?: string | null;
  city?: string | null;
  state?: string | null;
  zip?: string | null;
  isEnabled?: boolean | null;
  siteCollection?: Partial<ISiteCollection> | null;
  buildings?: Partial<IBuilding[]> | null;
  units?: Partial<IUnit[]> | null;
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should generate files: site.properties.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export enum SiteProperties {
  ID = 'id',
  TENANT_ID = 'tenantId',
  ACCOUNT_ID = 'accountId',
  ACCOUNT_NAME = 'accountName',
  SITE_COLLECTION_ID = 'siteCollectionId',
  NUMBER = 'number',
  NAME = 'name',
  ADDRESS_LINE_1 = 'addressLine1',
  ADDRESS_LINE_2 = 'addressLine2',
  CITY = 'city',
  STATE = 'state',
  ZIP = 'zip',
  IS_ENABLED = 'isEnabled',
  SITE_COLLECTION = 'siteCollection',
  BUILDINGS = 'buildings',
  UNITS = 'units',
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should generate files: site.test-obj-fac.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #test-object-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { createTestSiteCollection } from './site-collection.test-obj-fac';
import { createTestBuilding } from './building.test-obj-fac';
import { createTestUnit } from './unit.test-obj-fac';
import { ISite } from './site.model';
import { SiteProperties } from './site.properties';

export function createTestSite(): Partial<ISite> {
    return { 
      [SiteProperties.ID]: 'ID',
      [SiteProperties.TENANT_ID]: 'TENANT_ID',
      [SiteProperties.ACCOUNT_ID]: 'ACCOUNT_ID',
      [SiteProperties.ACCOUNT_NAME]: 'ACCOUNT_NAME',
      [SiteProperties.SITE_COLLECTION_ID]: 'SITE_COLLECTION_ID',
      [SiteProperties.NUMBER]: 'NUMBER',
      [SiteProperties.NAME]: 'NAME',
      [SiteProperties.ADDRESS_LINE_1]: 'ADDRESS_LINE_1',
      [SiteProperties.ADDRESS_LINE_2]: 'ADDRESS_LINE_2',
      [SiteProperties.CITY]: 'CITY',
      [SiteProperties.STATE]: 'STATE',
      [SiteProperties.ZIP]: 'ZIP',
      [SiteProperties.IS_ENABLED]: false, 
      [SiteProperties.SITE_COLLECTION]: createTestSiteCollection(),
      [SiteProperties.BUILDINGS]: [createTestBuilding()],
      [SiteProperties.UNITS]: [createTestUnit()],
    };
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should generate files: site-collection.form.ts 1`] = `
"/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup } from '@angular/forms'; //NOSONAR
import { IBuildingForm } from './building.form';
import { ISiteForm } from './site.form';

export interface ISiteCollectionForm {
    id: FormControl<string | null>;
    tenantId: FormControl<string | null>;
    number: FormControl<string>;
    name: FormControl<string>;
    code: FormControl<string>;
    addressLine1: FormControl<string | null>;
    addressLine2: FormControl<string | null>;
    city: FormControl<string | null>;
    state: FormControl<string | null>;
    zip: FormControl<string | null>;
    isSchedulerEnabled: FormControl<boolean>;
    siteCount: FormControl<number | null>;
    workCategoryTypes: FormControl<string | number>;
    buildings: FormArray<FormGroup<IBuildingForm>>;
    sites: FormArray<FormGroup<ISiteForm>>;
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should generate files: site-collection.form-group-fac.ts 1`] = `
"/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup, Validators } from '@angular/forms'; //NOSONAR
import { ISiteCollectionForm } from './site-collection.form';
import { IBuildingForm } from './building.form';
import { ISiteForm } from './site.form';

export function SiteCollectionFormGroupFac(): FormGroup<ISiteCollectionForm> {
  return new FormGroup<ISiteCollectionForm>({
    id: new FormControl<string | null>(null),
    tenantId: new FormControl<string | null>(null),
    number: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    name: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    code: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    addressLine1: new FormControl<string | null>(null),
    addressLine2: new FormControl<string | null>(null),
    city: new FormControl<string | null>(null),
    state: new FormControl<string | null>(null, { validators: Validators.compose([Validators.minLength(2), Validators.maxLength(2)]) }),
    zip: new FormControl<string | null>(null, { validators: Validators.compose([Validators.minLength(5), Validators.maxLength(10)]) }),
    isSchedulerEnabled: new FormControl<boolean>(false, { validators: Validators.required, nonNullable: true } ),
    siteCount: new FormControl<number | null>(null, { validators: Validators.compose([Validators.min(-250), Validators.max(49)]) }),
    workCategoryTypes: new FormControl<string | number>('', { validators: Validators.required, nonNullable: true } ),
    buildings: new FormArray<FormGroup<IBuildingForm>>([]),
    sites: new FormArray<FormGroup<ISiteForm>>([]),
  });
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should generate files: site-collection.model.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { IBuilding } from './building.model';
import { ISite } from './site.model';

// eslint-disable-next-line @typescript-eslint/no-empty-interface
export interface ISiteCollection {
  id?: string | null;
  tenantId?: string | null;
  number?: string;
  name?: string;
  code?: string;
  addressLine1?: string | null;
  addressLine2?: string | null;
  city?: string | null;
  state?: string | null;
  zip?: string | null;
  isSchedulerEnabled?: boolean;
  siteCount?: number | null;
  workCategoryTypes?: string | number;
  buildings?: Partial<IBuilding[]> | null;
  sites?: Partial<ISite[]> | null;
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should generate files: site-collection.properties.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export enum SiteCollectionProperties {
  ID = 'id',
  TENANT_ID = 'tenantId',
  NUMBER = 'number',
  NAME = 'name',
  CODE = 'code',
  ADDRESS_LINE_1 = 'addressLine1',
  ADDRESS_LINE_2 = 'addressLine2',
  CITY = 'city',
  STATE = 'state',
  ZIP = 'zip',
  IS_SCHEDULER_ENABLED = 'isSchedulerEnabled',
  SITE_COUNT = 'siteCount',
  WORK_CATEGORY_TYPES = 'workCategoryTypes',
  BUILDINGS = 'buildings',
  SITES = 'sites',
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should generate files: site-collection.test-obj-fac.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #test-object-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { createTestBuilding } from './building.test-obj-fac';
import { createTestSite } from './site.test-obj-fac';
import { ISiteCollection } from './site-collection.model';
import { SiteCollectionProperties } from './site-collection.properties';

export function createTestSiteCollection(): Partial<ISiteCollection> {
    return { 
      [SiteCollectionProperties.ID]: 'ID',
      [SiteCollectionProperties.TENANT_ID]: 'TENANT_ID',
      [SiteCollectionProperties.NUMBER]: 'NUMBER',
      [SiteCollectionProperties.NAME]: 'NAME',
      [SiteCollectionProperties.CODE]: 'CODE',
      [SiteCollectionProperties.ADDRESS_LINE_1]: 'ADDRESS_LINE_1',
      [SiteCollectionProperties.ADDRESS_LINE_2]: 'ADDRESS_LINE_2',
      [SiteCollectionProperties.CITY]: 'CITY',
      [SiteCollectionProperties.STATE]: 'ST',
      [SiteCollectionProperties.ZIP]: 'ZIP',
      [SiteCollectionProperties.IS_SCHEDULER_ENABLED]: false,
      [SiteCollectionProperties.SITE_COUNT]: 0,
      [SiteCollectionProperties.WORK_CATEGORY_TYPES]: 'WORK_CATEGORY_TYPES', 
      [SiteCollectionProperties.BUILDINGS]: [createTestBuilding()],
      [SiteCollectionProperties.SITES]: [createTestSite()],
    };
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should generate files: tag.form.ts 1`] = `
"/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup } from '@angular/forms'; //NOSONAR
import { IUnitTagForm } from './unit-tag.form';

export interface ITagForm {
    id: FormControl<string | null>;
    name: FormControl<string | null>;
    value: FormControl<string | null>;
    unitTags: FormArray<FormGroup<IUnitTagForm>>;
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should generate files: tag.form-group-fac.ts 1`] = `
"/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup, Validators } from '@angular/forms'; //NOSONAR
import { ITagForm } from './tag.form';
import { IUnitTagForm } from './unit-tag.form';

export function TagFormGroupFac(): FormGroup<ITagForm> {
  return new FormGroup<ITagForm>({
    id: new FormControl<string | null>(null),
    name: new FormControl<string | null>(null),
    value: new FormControl<string | null>(null),
    unitTags: new FormArray<FormGroup<IUnitTagForm>>([]),
  });
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should generate files: tag.model.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { IUnitTag } from './unit-tag.model';

// eslint-disable-next-line @typescript-eslint/no-empty-interface
export interface ITag {
  id?: string | null;
  name?: string | null;
  value?: string | null;
  unitTags?: Partial<IUnitTag[]> | null;
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should generate files: tag.properties.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export enum TagProperties {
  ID = 'id',
  NAME = 'name',
  VALUE = 'value',
  UNIT_TAGS = 'unitTags',
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should generate files: tag.test-obj-fac.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #test-object-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { createTestUnitTag } from './unit-tag.test-obj-fac';
import { ITag } from './tag.model';
import { TagProperties } from './tag.properties';

export function createTestTag(): Partial<ITag> {
    return { 
      [TagProperties.ID]: 'ID',
      [TagProperties.NAME]: 'NAME',
      [TagProperties.VALUE]: 'VALUE', 
      [TagProperties.UNIT_TAGS]: [createTestUnitTag()],
    };
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should generate files: unit.form.ts 1`] = `
"/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup } from '@angular/forms'; //NOSONAR
import { IBuildingForm } from './building.form';
import { ISiteForm } from './site.form';
import { IUnitTypeForm } from './unit-type.form';
import { IUnitTagForm } from './unit-tag.form';

export interface IUnitForm {
    id: FormControl<string | null>;
    number: FormControl<string | null>;
    unitTypeId: FormControl<string | null>;
    siteId: FormControl<string | null>;
    buildingId: FormControl<string | null>;
    isEnabled: FormControl<boolean | null>;
    building: FormGroup<IBuildingForm | null>;
    site: FormGroup<ISiteForm | null>;
    unitType: FormGroup<IUnitTypeForm | null>;
    unitTags: FormArray<FormGroup<IUnitTagForm>>;
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should generate files: unit.form-group-fac.ts 1`] = `
"/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup, Validators } from '@angular/forms'; //NOSONAR
import { IUnitForm } from './unit.form';
import { IBuildingForm } from './building.form';
import { ISiteForm } from './site.form';
import { IUnitTypeForm } from './unit-type.form';
import { IUnitTagForm } from './unit-tag.form';

export function UnitFormGroupFac(): FormGroup<IUnitForm> {
  return new FormGroup<IUnitForm>({
    id: new FormControl<string | null>(null),
    number: new FormControl<string | null>(null),
    unitTypeId: new FormControl<string | null>(null),
    siteId: new FormControl<string | null>(null),
    buildingId: new FormControl<string | null>(null),
    isEnabled: new FormControl<boolean | null>(null),
    building: new FormGroup<IBuildingForm | null>(null),
    site: new FormGroup<ISiteForm | null>(null),
    unitType: new FormGroup<IUnitTypeForm | null>(null),
    unitTags: new FormArray<FormGroup<IUnitTagForm>>([]),
  });
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should generate files: unit.model.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { IBuilding } from './building.model';
import { ISite } from './site.model';
import { IUnitType } from './unit-type.model';
import { IUnitTag } from './unit-tag.model';

// eslint-disable-next-line @typescript-eslint/no-empty-interface
export interface IUnit {
  id?: string | null;
  number?: string | null;
  unitTypeId?: string | null;
  siteId?: string | null;
  buildingId?: string | null;
  isEnabled?: boolean | null;
  building?: Partial<IBuilding> | null;
  site?: Partial<ISite> | null;
  unitType?: Partial<IUnitType> | null;
  unitTags?: Partial<IUnitTag[]> | null;
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should generate files: unit.properties.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export enum UnitProperties {
  ID = 'id',
  NUMBER = 'number',
  UNIT_TYPE_ID = 'unitTypeId',
  SITE_ID = 'siteId',
  BUILDING_ID = 'buildingId',
  IS_ENABLED = 'isEnabled',
  BUILDING = 'building',
  SITE = 'site',
  UNIT_TYPE = 'unitType',
  UNIT_TAGS = 'unitTags',
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should generate files: unit.test-obj-fac.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #test-object-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { createTestBuilding } from './building.test-obj-fac';
import { createTestSite } from './site.test-obj-fac';
import { createTestUnitType } from './unit-type.test-obj-fac';
import { createTestUnitTag } from './unit-tag.test-obj-fac';
import { IUnit } from './unit.model';
import { UnitProperties } from './unit.properties';

export function createTestUnit(): Partial<IUnit> {
    return { 
      [UnitProperties.ID]: 'ID',
      [UnitProperties.NUMBER]: 'NUMBER',
      [UnitProperties.UNIT_TYPE_ID]: 'UNIT_TYPE_ID',
      [UnitProperties.SITE_ID]: 'SITE_ID',
      [UnitProperties.BUILDING_ID]: 'BUILDING_ID',
      [UnitProperties.IS_ENABLED]: false, 
      [UnitProperties.BUILDING]: createTestBuilding(),
      [UnitProperties.SITE]: createTestSite(),
      [UnitProperties.UNIT_TYPE]: createTestUnitType(),
      [UnitProperties.UNIT_TAGS]: [createTestUnitTag()],
    };
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should generate files: unit-tag.form.ts 1`] = `
"/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup } from '@angular/forms'; //NOSONAR
import { ITagForm } from './tag.form';
import { IUnitForm } from './unit.form';

export interface IUnitTagForm {
    id: FormControl<string | null>;
    unitId: FormControl<string | null>;
    tagId: FormControl<string | null>;
    value: FormControl<string | null>;
    tag: FormGroup<ITagForm | null>;
    unit: FormGroup<IUnitForm | null>;
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should generate files: unit-tag.form-group-fac.ts 1`] = `
"/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup, Validators } from '@angular/forms'; //NOSONAR
import { IUnitTagForm } from './unit-tag.form';
import { ITagForm } from './tag.form';
import { IUnitForm } from './unit.form';

export function UnitTagFormGroupFac(): FormGroup<IUnitTagForm> {
  return new FormGroup<IUnitTagForm>({
    id: new FormControl<string | null>(null),
    unitId: new FormControl<string | null>(null),
    tagId: new FormControl<string | null>(null),
    value: new FormControl<string | null>(null),
    tag: new FormGroup<ITagForm | null>(null),
    unit: new FormGroup<IUnitForm | null>(null),
  });
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should generate files: unit-tag.model.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { ITag } from './tag.model';
import { IUnit } from './unit.model';

// eslint-disable-next-line @typescript-eslint/no-empty-interface
export interface IUnitTag {
  id?: string | null;
  unitId?: string | null;
  tagId?: string | null;
  value?: string | null;
  tag?: Partial<ITag> | null;
  unit?: Partial<IUnit> | null;
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should generate files: unit-tag.properties.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export enum UnitTagProperties {
  ID = 'id',
  UNIT_ID = 'unitId',
  TAG_ID = 'tagId',
  VALUE = 'value',
  TAG = 'tag',
  UNIT = 'unit',
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should generate files: unit-tag.test-obj-fac.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #test-object-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { createTestTag } from './tag.test-obj-fac';
import { createTestUnit } from './unit.test-obj-fac';
import { IUnitTag } from './unit-tag.model';
import { UnitTagProperties } from './unit-tag.properties';

export function createTestUnitTag(): Partial<IUnitTag> {
    return { 
      [UnitTagProperties.ID]: 'ID',
      [UnitTagProperties.UNIT_ID]: 'UNIT_ID',
      [UnitTagProperties.TAG_ID]: 'TAG_ID',
      [UnitTagProperties.VALUE]: 'VALUE', 
      [UnitTagProperties.TAG]: createTestTag(),
      [UnitTagProperties.UNIT]: createTestUnit(),
    };
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should generate files: unit-type.form.ts 1`] = `
"/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup } from '@angular/forms'; //NOSONAR

export interface IUnitTypeForm {
    id: FormControl<string | null>;
    code: FormControl<string | null>;
    description: FormControl<string | null>;
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should generate files: unit-type.form-group-fac.ts 1`] = `
"/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup, Validators } from '@angular/forms'; //NOSONAR
import { IUnitTypeForm } from './unit-type.form';

export function UnitTypeFormGroupFac(): FormGroup<IUnitTypeForm> {
  return new FormGroup<IUnitTypeForm>({
    id: new FormControl<string | null>(null),
    code: new FormControl<string | null>(null),
    description: new FormControl<string | null>(null),
  });
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should generate files: unit-type.model.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
// eslint-disable-next-line @typescript-eslint/no-empty-interface
export interface IUnitType {
  id?: string | null;
  code?: string | null;
  description?: string | null;
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should generate files: unit-type.properties.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export enum UnitTypeProperties {
  ID = 'id',
  CODE = 'code',
  DESCRIPTION = 'description',
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should generate files: unit-type.test-obj-fac.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #test-object-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { IUnitType } from './unit-type.model';
import { UnitTypeProperties } from './unit-type.properties';

export function createTestUnitType(): Partial<IUnitType> {
    return { 
      [UnitTypeProperties.ID]: 'ID',
      [UnitTypeProperties.CODE]: 'CODE',
      [UnitTypeProperties.DESCRIPTION]: 'DESCRIPTION', 
    };
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should not generate files 1`] = `
Array [
  "building.form.ts",
  "building.test-obj-fac.ts",
  "endpoints.ts",
  "site-collection.form.ts",
  "site-collection.test-obj-fac.ts",
  "site.form.ts",
  "site.test-obj-fac.ts",
  "tag.form.ts",
  "tag.test-obj-fac.ts",
  "unit-tag.form.ts",
  "unit-tag.test-obj-fac.ts",
  "unit-type.form.ts",
  "unit-type.test-obj-fac.ts",
  "unit.form.ts",
  "unit.test-obj-fac.ts",
]
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should not generate files: building.form.ts 1`] = `
"/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup } from '@angular/forms'; //NOSONAR
import { ISiteForm } from './site.form';
import { IUnitForm } from './unit.form';

export interface IBuildingForm {
    id: FormControl<string | null>;
    siteId: FormControl<string | null>;
    identifier: FormControl<string | null>;
    isEnabled: FormControl<boolean | null>;
    site: FormGroup<ISiteForm | null>;
    units: FormArray<FormGroup<IUnitForm>>;
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should not generate files: building.test-obj-fac.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #test-object-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { createTestSite } from './site.test-obj-fac';
import { createTestUnit } from './unit.test-obj-fac';
import { IBuilding } from './building.model';
import { BuildingProperties } from './building.properties';

export function createTestBuilding(): Partial<IBuilding> {
    return { 
      [BuildingProperties.ID]: 'ID',
      [BuildingProperties.SITE_ID]: 'SITE_ID',
      [BuildingProperties.IDENTIFIER]: 'IDENTIFIER',
      [BuildingProperties.IS_ENABLED]: false, 
      [BuildingProperties.SITE]: createTestSite(),
      [BuildingProperties.UNITS]: [createTestUnit()],
    };
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should not generate files: endpoints.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #endpoints-ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export enum Endpoints {
  buildings = '/odata/v1/Buildings',
  siteCollections = '/odata/v1/SiteCollections',
  sites = '/odata/v1/Sites',
  units = '/odata/v1/Units',
  unitTypes = '/odata/v1/UnitTypes',
}
export interface IEndpoints {
  readonly buildings: string;
  readonly siteCollections: string;
  readonly sites: string;
  readonly units: string;
  readonly unitTypes: string;
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should not generate files: site.form.ts 1`] = `
"/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup } from '@angular/forms'; //NOSONAR
import { ISiteCollectionForm } from './site-collection.form';
import { IBuildingForm } from './building.form';
import { IUnitForm } from './unit.form';

export interface ISiteForm {
    id: FormControl<string | null>;
    tenantId: FormControl<string | null>;
    accountId: FormControl<string | null>;
    accountName: FormControl<string | null>;
    siteCollectionId: FormControl<string | null>;
    number: FormControl<string | null>;
    name: FormControl<string | null>;
    addressLine1: FormControl<string | null>;
    addressLine2: FormControl<string | null>;
    city: FormControl<string | null>;
    state: FormControl<string | null>;
    zip: FormControl<string | null>;
    isEnabled: FormControl<boolean | null>;
    siteCollection: FormGroup<ISiteCollectionForm | null>;
    buildings: FormArray<FormGroup<IBuildingForm>>;
    units: FormArray<FormGroup<IUnitForm>>;
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should not generate files: site.test-obj-fac.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #test-object-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { createTestSiteCollection } from './site-collection.test-obj-fac';
import { createTestBuilding } from './building.test-obj-fac';
import { createTestUnit } from './unit.test-obj-fac';
import { ISite } from './site.model';
import { SiteProperties } from './site.properties';

export function createTestSite(): Partial<ISite> {
    return { 
      [SiteProperties.ID]: 'ID',
      [SiteProperties.TENANT_ID]: 'TENANT_ID',
      [SiteProperties.ACCOUNT_ID]: 'ACCOUNT_ID',
      [SiteProperties.ACCOUNT_NAME]: 'ACCOUNT_NAME',
      [SiteProperties.SITE_COLLECTION_ID]: 'SITE_COLLECTION_ID',
      [SiteProperties.NUMBER]: 'NUMBER',
      [SiteProperties.NAME]: 'NAME',
      [SiteProperties.ADDRESS_LINE_1]: 'ADDRESS_LINE_1',
      [SiteProperties.ADDRESS_LINE_2]: 'ADDRESS_LINE_2',
      [SiteProperties.CITY]: 'CITY',
      [SiteProperties.STATE]: 'STATE',
      [SiteProperties.ZIP]: 'ZIP',
      [SiteProperties.IS_ENABLED]: false, 
      [SiteProperties.SITE_COLLECTION]: createTestSiteCollection(),
      [SiteProperties.BUILDINGS]: [createTestBuilding()],
      [SiteProperties.UNITS]: [createTestUnit()],
    };
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should not generate files: site-collection.form.ts 1`] = `
"/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup } from '@angular/forms'; //NOSONAR
import { IBuildingForm } from './building.form';
import { ISiteForm } from './site.form';

export interface ISiteCollectionForm {
    id: FormControl<string | null>;
    tenantId: FormControl<string | null>;
    number: FormControl<string>;
    name: FormControl<string>;
    code: FormControl<string>;
    addressLine1: FormControl<string | null>;
    addressLine2: FormControl<string | null>;
    city: FormControl<string | null>;
    state: FormControl<string | null>;
    zip: FormControl<string | null>;
    isSchedulerEnabled: FormControl<boolean>;
    siteCount: FormControl<number | null>;
    workCategoryTypes: FormControl<string | number>;
    buildings: FormArray<FormGroup<IBuildingForm>>;
    sites: FormArray<FormGroup<ISiteForm>>;
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should not generate files: site-collection.test-obj-fac.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #test-object-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { createTestBuilding } from './building.test-obj-fac';
import { createTestSite } from './site.test-obj-fac';
import { ISiteCollection } from './site-collection.model';
import { SiteCollectionProperties } from './site-collection.properties';

export function createTestSiteCollection(): Partial<ISiteCollection> {
    return { 
      [SiteCollectionProperties.ID]: 'ID',
      [SiteCollectionProperties.TENANT_ID]: 'TENANT_ID',
      [SiteCollectionProperties.NUMBER]: 'NUMBER',
      [SiteCollectionProperties.NAME]: 'NAME',
      [SiteCollectionProperties.CODE]: 'CODE',
      [SiteCollectionProperties.ADDRESS_LINE_1]: 'ADDRESS_LINE_1',
      [SiteCollectionProperties.ADDRESS_LINE_2]: 'ADDRESS_LINE_2',
      [SiteCollectionProperties.CITY]: 'CITY',
      [SiteCollectionProperties.STATE]: 'ST',
      [SiteCollectionProperties.ZIP]: 'ZIP',
      [SiteCollectionProperties.IS_SCHEDULER_ENABLED]: false,
      [SiteCollectionProperties.SITE_COUNT]: 0,
      [SiteCollectionProperties.WORK_CATEGORY_TYPES]: 'WORK_CATEGORY_TYPES', 
      [SiteCollectionProperties.BUILDINGS]: [createTestBuilding()],
      [SiteCollectionProperties.SITES]: [createTestSite()],
    };
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should not generate files: tag.form.ts 1`] = `
"/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup } from '@angular/forms'; //NOSONAR
import { IUnitTagForm } from './unit-tag.form';

export interface ITagForm {
    id: FormControl<string | null>;
    name: FormControl<string | null>;
    value: FormControl<string | null>;
    unitTags: FormArray<FormGroup<IUnitTagForm>>;
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should not generate files: tag.test-obj-fac.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #test-object-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { createTestUnitTag } from './unit-tag.test-obj-fac';
import { ITag } from './tag.model';
import { TagProperties } from './tag.properties';

export function createTestTag(): Partial<ITag> {
    return { 
      [TagProperties.ID]: 'ID',
      [TagProperties.NAME]: 'NAME',
      [TagProperties.VALUE]: 'VALUE', 
      [TagProperties.UNIT_TAGS]: [createTestUnitTag()],
    };
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should not generate files: unit.form.ts 1`] = `
"/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup } from '@angular/forms'; //NOSONAR
import { IBuildingForm } from './building.form';
import { ISiteForm } from './site.form';
import { IUnitTypeForm } from './unit-type.form';
import { IUnitTagForm } from './unit-tag.form';

export interface IUnitForm {
    id: FormControl<string | null>;
    number: FormControl<string | null>;
    unitTypeId: FormControl<string | null>;
    siteId: FormControl<string | null>;
    buildingId: FormControl<string | null>;
    isEnabled: FormControl<boolean | null>;
    building: FormGroup<IBuildingForm | null>;
    site: FormGroup<ISiteForm | null>;
    unitType: FormGroup<IUnitTypeForm | null>;
    unitTags: FormArray<FormGroup<IUnitTagForm>>;
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should not generate files: unit.test-obj-fac.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #test-object-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { createTestBuilding } from './building.test-obj-fac';
import { createTestSite } from './site.test-obj-fac';
import { createTestUnitType } from './unit-type.test-obj-fac';
import { createTestUnitTag } from './unit-tag.test-obj-fac';
import { IUnit } from './unit.model';
import { UnitProperties } from './unit.properties';

export function createTestUnit(): Partial<IUnit> {
    return { 
      [UnitProperties.ID]: 'ID',
      [UnitProperties.NUMBER]: 'NUMBER',
      [UnitProperties.UNIT_TYPE_ID]: 'UNIT_TYPE_ID',
      [UnitProperties.SITE_ID]: 'SITE_ID',
      [UnitProperties.BUILDING_ID]: 'BUILDING_ID',
      [UnitProperties.IS_ENABLED]: false, 
      [UnitProperties.BUILDING]: createTestBuilding(),
      [UnitProperties.SITE]: createTestSite(),
      [UnitProperties.UNIT_TYPE]: createTestUnitType(),
      [UnitProperties.UNIT_TAGS]: [createTestUnitTag()],
    };
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should not generate files: unit-tag.form.ts 1`] = `
"/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup } from '@angular/forms'; //NOSONAR
import { ITagForm } from './tag.form';
import { IUnitForm } from './unit.form';

export interface IUnitTagForm {
    id: FormControl<string | null>;
    unitId: FormControl<string | null>;
    tagId: FormControl<string | null>;
    value: FormControl<string | null>;
    tag: FormGroup<ITagForm | null>;
    unit: FormGroup<IUnitForm | null>;
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should not generate files: unit-tag.test-obj-fac.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #test-object-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { createTestTag } from './tag.test-obj-fac';
import { createTestUnit } from './unit.test-obj-fac';
import { IUnitTag } from './unit-tag.model';
import { UnitTagProperties } from './unit-tag.properties';

export function createTestUnitTag(): Partial<IUnitTag> {
    return { 
      [UnitTagProperties.ID]: 'ID',
      [UnitTagProperties.UNIT_ID]: 'UNIT_ID',
      [UnitTagProperties.TAG_ID]: 'TAG_ID',
      [UnitTagProperties.VALUE]: 'VALUE', 
      [UnitTagProperties.TAG]: createTestTag(),
      [UnitTagProperties.UNIT]: createTestUnit(),
    };
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should not generate files: unit-type.form.ts 1`] = `
"/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup } from '@angular/forms'; //NOSONAR

export interface IUnitTypeForm {
    id: FormControl<string | null>;
    code: FormControl<string | null>;
    description: FormControl<string | null>;
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should not generate files: unit-type.test-obj-fac.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #test-object-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { IUnitType } from './unit-type.model';
import { UnitTypeProperties } from './unit-type.properties';

export function createTestUnitType(): Partial<IUnitType> {
    return { 
      [UnitTypeProperties.ID]: 'ID',
      [UnitTypeProperties.CODE]: 'CODE',
      [UnitTypeProperties.DESCRIPTION]: 'DESCRIPTION', 
    };
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should skip formGroup Fac files 1`] = `
Array [
  "building.model.ts",
  "building.properties.ts",
  "building.test-obj-fac.ts",
  "endpoints.ts",
  "index.ts",
  "site-collection.model.ts",
  "site-collection.properties.ts",
  "site-collection.test-obj-fac.ts",
  "site.model.ts",
  "site.properties.ts",
  "site.test-obj-fac.ts",
  "tag.model.ts",
  "tag.properties.ts",
  "tag.test-obj-fac.ts",
  "unit-tag.model.ts",
  "unit-tag.properties.ts",
  "unit-tag.test-obj-fac.ts",
  "unit-type.model.ts",
  "unit-type.properties.ts",
  "unit-type.test-obj-fac.ts",
  "unit.model.ts",
  "unit.properties.ts",
  "unit.test-obj-fac.ts",
]
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should skip formGroup Fac files 2`] = `
Array [
  "building.model.ts",
  "building.properties.ts",
  "building.test-obj-fac.ts",
  "endpoints.ts",
  "index.ts",
  "site-collection.model.ts",
  "site-collection.properties.ts",
  "site-collection.test-obj-fac.ts",
  "site.model.ts",
  "site.properties.ts",
  "site.test-obj-fac.ts",
  "tag.model.ts",
  "tag.properties.ts",
  "tag.test-obj-fac.ts",
  "unit-tag.model.ts",
  "unit-tag.properties.ts",
  "unit-tag.test-obj-fac.ts",
  "unit-type.model.ts",
  "unit-type.properties.ts",
  "unit-type.test-obj-fac.ts",
  "unit.model.ts",
  "unit.properties.ts",
  "unit.test-obj-fac.ts",
]
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should skip formGroup Fac files: building.model.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { ISite } from './site.model';
import { IUnit } from './unit.model';

// eslint-disable-next-line @typescript-eslint/no-empty-interface
export interface IBuilding {
  id?: string | null;
  siteId?: string | null;
  identifier?: string | null;
  isEnabled?: boolean | null;
  site?: Partial<ISite> | null;
  units?: Partial<IUnit[]> | null;
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should skip formGroup Fac files: building.properties.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export enum BuildingProperties {
  ID = 'id',
  SITE_ID = 'siteId',
  IDENTIFIER = 'identifier',
  IS_ENABLED = 'isEnabled',
  SITE = 'site',
  UNITS = 'units',
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should skip formGroup Fac files: building.test-obj-fac.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #test-object-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { createTestSite } from './site.test-obj-fac';
import { createTestUnit } from './unit.test-obj-fac';
import { IBuilding } from './building.model';
import { BuildingProperties } from './building.properties';

export function createTestBuilding(): Partial<IBuilding> {
    return { 
      [BuildingProperties.ID]: 'ID',
      [BuildingProperties.SITE_ID]: 'SITE_ID',
      [BuildingProperties.IDENTIFIER]: 'IDENTIFIER',
      [BuildingProperties.IS_ENABLED]: false, 
      [BuildingProperties.SITE]: createTestSite(),
      [BuildingProperties.UNITS]: [createTestUnit()],
    };
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should skip formGroup Fac files: endpoints.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #endpoints-ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export enum Endpoints {
  buildings = '/odata/v1/Buildings',
  siteCollections = '/odata/v1/SiteCollections',
  sites = '/odata/v1/Sites',
  units = '/odata/v1/Units',
  unitTypes = '/odata/v1/UnitTypes',
}
export interface IEndpoints {
  readonly buildings: string;
  readonly siteCollections: string;
  readonly sites: string;
  readonly units: string;
  readonly unitTypes: string;
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should skip formGroup Fac files: index.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #generate-barrel-ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export * from './building.model';
export * from './building.properties';
export * from './building.test-obj-fac';
export * from './site-collection.model';
export * from './site-collection.properties';
export * from './site-collection.test-obj-fac';
export * from './site.model';
export * from './site.properties';
export * from './site.test-obj-fac';
export * from './tag.model';
export * from './tag.properties';
export * from './tag.test-obj-fac';
export * from './unit-tag.model';
export * from './unit-tag.properties';
export * from './unit-tag.test-obj-fac';
export * from './unit-type.model';
export * from './unit-type.properties';
export * from './unit-type.test-obj-fac';
export * from './unit.model';
export * from './unit.properties';
export * from './unit.test-obj-fac';
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should skip formGroup Fac files: site.model.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { ISiteCollection } from './site-collection.model';
import { IBuilding } from './building.model';
import { IUnit } from './unit.model';

// eslint-disable-next-line @typescript-eslint/no-empty-interface
export interface ISite {
  id?: string | null;
  tenantId?: string | null;
  accountId?: string | null;
  accountName?: string | null;
  siteCollectionId?: string | null;
  number?: string | null;
  name?: string | null;
  addressLine1?: string | null;
  addressLine2?: string | null;
  city?: string | null;
  state?: string | null;
  zip?: string | null;
  isEnabled?: boolean | null;
  siteCollection?: Partial<ISiteCollection> | null;
  buildings?: Partial<IBuilding[]> | null;
  units?: Partial<IUnit[]> | null;
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should skip formGroup Fac files: site.properties.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export enum SiteProperties {
  ID = 'id',
  TENANT_ID = 'tenantId',
  ACCOUNT_ID = 'accountId',
  ACCOUNT_NAME = 'accountName',
  SITE_COLLECTION_ID = 'siteCollectionId',
  NUMBER = 'number',
  NAME = 'name',
  ADDRESS_LINE_1 = 'addressLine1',
  ADDRESS_LINE_2 = 'addressLine2',
  CITY = 'city',
  STATE = 'state',
  ZIP = 'zip',
  IS_ENABLED = 'isEnabled',
  SITE_COLLECTION = 'siteCollection',
  BUILDINGS = 'buildings',
  UNITS = 'units',
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should skip formGroup Fac files: site.test-obj-fac.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #test-object-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { createTestSiteCollection } from './site-collection.test-obj-fac';
import { createTestBuilding } from './building.test-obj-fac';
import { createTestUnit } from './unit.test-obj-fac';
import { ISite } from './site.model';
import { SiteProperties } from './site.properties';

export function createTestSite(): Partial<ISite> {
    return { 
      [SiteProperties.ID]: 'ID',
      [SiteProperties.TENANT_ID]: 'TENANT_ID',
      [SiteProperties.ACCOUNT_ID]: 'ACCOUNT_ID',
      [SiteProperties.ACCOUNT_NAME]: 'ACCOUNT_NAME',
      [SiteProperties.SITE_COLLECTION_ID]: 'SITE_COLLECTION_ID',
      [SiteProperties.NUMBER]: 'NUMBER',
      [SiteProperties.NAME]: 'NAME',
      [SiteProperties.ADDRESS_LINE_1]: 'ADDRESS_LINE_1',
      [SiteProperties.ADDRESS_LINE_2]: 'ADDRESS_LINE_2',
      [SiteProperties.CITY]: 'CITY',
      [SiteProperties.STATE]: 'STATE',
      [SiteProperties.ZIP]: 'ZIP',
      [SiteProperties.IS_ENABLED]: false, 
      [SiteProperties.SITE_COLLECTION]: createTestSiteCollection(),
      [SiteProperties.BUILDINGS]: [createTestBuilding()],
      [SiteProperties.UNITS]: [createTestUnit()],
    };
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should skip formGroup Fac files: site-collection.model.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { IBuilding } from './building.model';
import { ISite } from './site.model';

// eslint-disable-next-line @typescript-eslint/no-empty-interface
export interface ISiteCollection {
  id?: string | null;
  tenantId?: string | null;
  number?: string;
  name?: string;
  code?: string;
  addressLine1?: string | null;
  addressLine2?: string | null;
  city?: string | null;
  state?: string | null;
  zip?: string | null;
  isSchedulerEnabled?: boolean;
  siteCount?: number | null;
  workCategoryTypes?: string | number;
  buildings?: Partial<IBuilding[]> | null;
  sites?: Partial<ISite[]> | null;
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should skip formGroup Fac files: site-collection.properties.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export enum SiteCollectionProperties {
  ID = 'id',
  TENANT_ID = 'tenantId',
  NUMBER = 'number',
  NAME = 'name',
  CODE = 'code',
  ADDRESS_LINE_1 = 'addressLine1',
  ADDRESS_LINE_2 = 'addressLine2',
  CITY = 'city',
  STATE = 'state',
  ZIP = 'zip',
  IS_SCHEDULER_ENABLED = 'isSchedulerEnabled',
  SITE_COUNT = 'siteCount',
  WORK_CATEGORY_TYPES = 'workCategoryTypes',
  BUILDINGS = 'buildings',
  SITES = 'sites',
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should skip formGroup Fac files: site-collection.test-obj-fac.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #test-object-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { createTestBuilding } from './building.test-obj-fac';
import { createTestSite } from './site.test-obj-fac';
import { ISiteCollection } from './site-collection.model';
import { SiteCollectionProperties } from './site-collection.properties';

export function createTestSiteCollection(): Partial<ISiteCollection> {
    return { 
      [SiteCollectionProperties.ID]: 'ID',
      [SiteCollectionProperties.TENANT_ID]: 'TENANT_ID',
      [SiteCollectionProperties.NUMBER]: 'NUMBER',
      [SiteCollectionProperties.NAME]: 'NAME',
      [SiteCollectionProperties.CODE]: 'CODE',
      [SiteCollectionProperties.ADDRESS_LINE_1]: 'ADDRESS_LINE_1',
      [SiteCollectionProperties.ADDRESS_LINE_2]: 'ADDRESS_LINE_2',
      [SiteCollectionProperties.CITY]: 'CITY',
      [SiteCollectionProperties.STATE]: 'ST',
      [SiteCollectionProperties.ZIP]: 'ZIP',
      [SiteCollectionProperties.IS_SCHEDULER_ENABLED]: false,
      [SiteCollectionProperties.SITE_COUNT]: 0,
      [SiteCollectionProperties.WORK_CATEGORY_TYPES]: 'WORK_CATEGORY_TYPES', 
      [SiteCollectionProperties.BUILDINGS]: [createTestBuilding()],
      [SiteCollectionProperties.SITES]: [createTestSite()],
    };
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should skip formGroup Fac files: tag.model.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { IUnitTag } from './unit-tag.model';

// eslint-disable-next-line @typescript-eslint/no-empty-interface
export interface ITag {
  id?: string | null;
  name?: string | null;
  value?: string | null;
  unitTags?: Partial<IUnitTag[]> | null;
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should skip formGroup Fac files: tag.properties.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export enum TagProperties {
  ID = 'id',
  NAME = 'name',
  VALUE = 'value',
  UNIT_TAGS = 'unitTags',
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should skip formGroup Fac files: tag.test-obj-fac.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #test-object-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { createTestUnitTag } from './unit-tag.test-obj-fac';
import { ITag } from './tag.model';
import { TagProperties } from './tag.properties';

export function createTestTag(): Partial<ITag> {
    return { 
      [TagProperties.ID]: 'ID',
      [TagProperties.NAME]: 'NAME',
      [TagProperties.VALUE]: 'VALUE', 
      [TagProperties.UNIT_TAGS]: [createTestUnitTag()],
    };
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should skip formGroup Fac files: unit.model.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { IBuilding } from './building.model';
import { ISite } from './site.model';
import { IUnitType } from './unit-type.model';
import { IUnitTag } from './unit-tag.model';

// eslint-disable-next-line @typescript-eslint/no-empty-interface
export interface IUnit {
  id?: string | null;
  number?: string | null;
  unitTypeId?: string | null;
  siteId?: string | null;
  buildingId?: string | null;
  isEnabled?: boolean | null;
  building?: Partial<IBuilding> | null;
  site?: Partial<ISite> | null;
  unitType?: Partial<IUnitType> | null;
  unitTags?: Partial<IUnitTag[]> | null;
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should skip formGroup Fac files: unit.properties.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export enum UnitProperties {
  ID = 'id',
  NUMBER = 'number',
  UNIT_TYPE_ID = 'unitTypeId',
  SITE_ID = 'siteId',
  BUILDING_ID = 'buildingId',
  IS_ENABLED = 'isEnabled',
  BUILDING = 'building',
  SITE = 'site',
  UNIT_TYPE = 'unitType',
  UNIT_TAGS = 'unitTags',
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should skip formGroup Fac files: unit.test-obj-fac.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #test-object-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { createTestBuilding } from './building.test-obj-fac';
import { createTestSite } from './site.test-obj-fac';
import { createTestUnitType } from './unit-type.test-obj-fac';
import { createTestUnitTag } from './unit-tag.test-obj-fac';
import { IUnit } from './unit.model';
import { UnitProperties } from './unit.properties';

export function createTestUnit(): Partial<IUnit> {
    return { 
      [UnitProperties.ID]: 'ID',
      [UnitProperties.NUMBER]: 'NUMBER',
      [UnitProperties.UNIT_TYPE_ID]: 'UNIT_TYPE_ID',
      [UnitProperties.SITE_ID]: 'SITE_ID',
      [UnitProperties.BUILDING_ID]: 'BUILDING_ID',
      [UnitProperties.IS_ENABLED]: false, 
      [UnitProperties.BUILDING]: createTestBuilding(),
      [UnitProperties.SITE]: createTestSite(),
      [UnitProperties.UNIT_TYPE]: createTestUnitType(),
      [UnitProperties.UNIT_TAGS]: [createTestUnitTag()],
    };
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should skip formGroup Fac files: unit-tag.model.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { ITag } from './tag.model';
import { IUnit } from './unit.model';

// eslint-disable-next-line @typescript-eslint/no-empty-interface
export interface IUnitTag {
  id?: string | null;
  unitId?: string | null;
  tagId?: string | null;
  value?: string | null;
  tag?: Partial<ITag> | null;
  unit?: Partial<IUnit> | null;
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should skip formGroup Fac files: unit-tag.properties.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export enum UnitTagProperties {
  ID = 'id',
  UNIT_ID = 'unitId',
  TAG_ID = 'tagId',
  VALUE = 'value',
  TAG = 'tag',
  UNIT = 'unit',
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should skip formGroup Fac files: unit-tag.test-obj-fac.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #test-object-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { createTestTag } from './tag.test-obj-fac';
import { createTestUnit } from './unit.test-obj-fac';
import { IUnitTag } from './unit-tag.model';
import { UnitTagProperties } from './unit-tag.properties';

export function createTestUnitTag(): Partial<IUnitTag> {
    return { 
      [UnitTagProperties.ID]: 'ID',
      [UnitTagProperties.UNIT_ID]: 'UNIT_ID',
      [UnitTagProperties.TAG_ID]: 'TAG_ID',
      [UnitTagProperties.VALUE]: 'VALUE', 
      [UnitTagProperties.TAG]: createTestTag(),
      [UnitTagProperties.UNIT]: createTestUnit(),
    };
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should skip formGroup Fac files: unit-type.model.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
// eslint-disable-next-line @typescript-eslint/no-empty-interface
export interface IUnitType {
  id?: string | null;
  code?: string | null;
  description?: string | null;
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should skip formGroup Fac files: unit-type.properties.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export enum UnitTypeProperties {
  ID = 'id',
  CODE = 'code',
  DESCRIPTION = 'description',
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should skip formGroup Fac files: unit-type.test-obj-fac.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #test-object-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { IUnitType } from './unit-type.model';
import { UnitTypeProperties } from './unit-type.properties';

export function createTestUnitType(): Partial<IUnitType> {
    return { 
      [UnitTypeProperties.ID]: 'ID',
      [UnitTypeProperties.CODE]: 'CODE',
      [UnitTypeProperties.DESCRIPTION]: 'DESCRIPTION', 
    };
}
"
`;
